# parallel-mengene

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  TESTING_SUMMARY.md  deny.toml  roadmap.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_WORKFLOW.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: benchmark.yml  ci-full.yml  ci.yml  codeql.yml  cross-platform.yml  dependency-review.yml  docs.yml  format-check.yml  release.yml  security.yml
crates/parallel-mengene-benchmarks/: Cargo.toml
crates/parallel-mengene-benchmarks/src/: benchmark_runner.rs  lib.rs  main.rs  metrics_collector.rs  performance_analyzer.rs  report_generator.rs  test_data_generator.rs
crates/parallel-mengene-cli/: Cargo.toml  test.txt
crates/parallel-mengene-cli/debian/: control
crates/parallel-mengene-cli/src/: cli.rs  commands.rs  main.rs
crates/parallel-mengene-core/: Cargo.toml
crates/parallel-mengene-core/src/: algorithm_selector.rs  algorithms.rs  binary_pma_format.rs  compression.rs  error.rs  lib.rs  utils.rs
crates/parallel-mengene-pipeline/: Cargo.toml
crates/parallel-mengene-pipeline/src/: coordinator.rs  cpu_pipeline.rs  intelligent_pipeline.rs  lib.rs  memory_mapping.rs  memory_monitor.rs  parallel_pipeline.rs
crates/parallel-mengene-pipeline/tests/: integration_tests.rs  performance_profiler.rs
docs/: API_REFERENCE.md  USER_GUIDE.md
examples/: basic_usage.rs
scripts/: create-macos-app.sh  delete-all-runs.sh  delete-workflow-runs.sh  installer.nsi  setup-docker-permissions.sh
tests/: README.md  integration_tests.rs  run_tests.py  simple_test_runner.py
tests/benchmarks/: benchmark_analysis.py  benchmark_comparison.sh  benchmark_results.csv  run_benchmarks.py
tests/fixtures/: generate_test_data.py
tests/integration/: test_compression_pipeline.rs  test_pipeline.py
tests/performance/: performance_profiler.rs
tests/unit/: test_compression.py
