[package]
name = "parallel-mengene-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core compression algorithms, intelligent selection, and binary PMA format for parallel-mengene"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Performance
rayon.workspace = true
memmap2.workspace = true
crossbeam-channel.workspace = true

# Compression algorithms
lz4_flex = "0.11"
flate2 = "1.1"
zstd = "0.13"

# Utilities
byteorder.workspace = true
crc32fast.workspace = true
sha2.workspace = true
humantime.workspace = true
num_cpus.workspace = true
sysinfo.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest.workspace = true
tempfile = "3.8"
serde_json = "1.0"
