[package]
name = "parallel-mengene-pipeline"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Intelligent parallel compression pipeline with memory optimization and dynamic thread allocation"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Performance
rayon.workspace = true
memmap2.workspace = true
crossbeam-channel.workspace = true
num_cpus.workspace = true
byteorder.workspace = true
sysinfo.workspace = true

# Core crate
parallel-mengene-core = { path = "../parallel-mengene-core" }

# File system utilities
walkdir = "2.4"

# GPU crate - REMOVED (CPU-only approach)

[dev-dependencies]
tempfile = "3.8"
proptest.workspace = true

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "performance_profiler"
path = "tests/performance_profiler.rs"
